--- a/proyectoUsabilidad/indexAPARSemantico.html
+++ b/proyectoUsabilidad/indexAPARSemantico.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>APAR</title>
 
-<link rel="preload" href="static/css/styles.css" as="style" onload="this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="static/css/styles.css"></noscript>
+    <link rel="stylesheet" href="static/css/styles.css" />
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
