--- a/proyectoUsabilidad/indexAPARSemantico.html
+++ b/proyectoUsabilidad/indexAPARSemantico.html
@@ -218,12 +218,14 @@
             <img
               src="static/public/images/ProductosDestacados/RooGooTire.webp"
               alt="Promotional banner for RooGoo Tire products"
+              loading="lazy"
             />
             <div>
               <button>SHOP NOW</button>
               <img
                 src="static/public/images/ProductosDestacados/ASingleDaySale.webp"
                 alt="Single day sale promotional banner"
+                loading="lazy"
               />
             </div>
           </aside>
@@ -256,6 +258,7 @@
                     class="imagenesProductos"
                     src="static/public/images/ProductosDestacados/Neumatico.webp"
                     alt="Horrison tire product image"
+                    loading="lazy"
                   />
                   <span>Sale !</span>
                 </div>
@@ -305,6 +308,7 @@
                     class="imagenesProductos"
                     src="static/public/images/ProductosDestacados/Llanta.webp"
                     alt="Wallnut Desk wheel product image"
+                    loading="lazy"
                   />
                   <span>Sale !</span>
                 </div>
@@ -354,6 +358,7 @@
                     class="imagenesProductos"
                     src="static/public/images/ProductosDestacados/DiscoFreno.webp"
                     alt="Arper Round brake disc product image"
+                    loading="lazy"
                   />
                   <span>Sale !</span>
                 </div>
@@ -403,6 +408,7 @@
                     class="imagenesProductos"
                     src="static/public/images/ProductosDestacados/Aceite.webp"
                     alt="Auto oil product image"
+                    loading="lazy"
                   />
                   <span>Sale !</span>
                 </div>
@@ -565,48 +571,52 @@
               </svg>
             </li>
             <li>
-              <img src="static/public/images/Marcas/SportCar1.webp" alt="Sportcar logo" />
+              <img src="static/public/images/Marcas/SportCar1.webp" alt="Sportcar logo" loading="lazy" />
             </li>
             <li>
-              <img src="static/public/images/Marcas/AutoDetalier.webp" alt="AutoDetailer" />
+              <img src="static/public/images/Marcas/AutoDetalier.webp" alt="AutoDetailer" loading="lazy" />
             </li>
             <li>
-              <img src="static/public/images/Marcas/SportCar2.webp" alt="Sportcar logo 2" />
+              <img src="static/public/images/Marcas/SportCar2.webp" alt="Sportcar logo 2" loading="lazy" />
             </li>
             <li>
-              <img src="static/public/images/Marcas/AutoModif.webp" alt="AutoModif logo" />
+              <img src="static/public/images/Marcas/AutoModif.webp" alt="AutoModif logo" loading="lazy" />
             </li>
             <li>
               <img
                 src="static/public/images/Marcas/GrantCar.webp"
                 alt="Grant Car Concepts logo"
+                loading="lazy"
               />
             </li>
             <li>
               <img
                 src="static/public/images/Marcas/GetEasyCar.webp"
                 alt="Get Easy Car logo"
+                loading="lazy"
               />
             </li>
             <li>
-              <img src="static/public/images/Marcas/YourName.webp" alt="Logo Shield Car" />
+              <img src="static/public/images/Marcas/YourName.webp" alt="Logo Shield Car" loading="lazy" />
             </li>
             <li>
-              <img src="static/public/images/Marcas/Company.webp" alt="Company Motors logo" />
+              <img src="static/public/images/Marcas/Company.webp" alt="Company Motors logo" loading="lazy" />
             </li>
             <li>
               <img
                 src="static/public/images/Marcas/HARRISAUTOS.webp"
                 alt="Harbers Autos logo"
+                loading="lazy"
               />
             </li>
             <li>
-              <img src="static/public/images/Marcas/SpeedAuto.webp" alt="Speedauto logo" />
+              <img src="static/public/images/Marcas/SpeedAuto.webp" alt="Speedauto logo" loading="lazy" />
             </li>
             <li>
               <img
                 src="static/public/images/Marcas/AutoCompany.webp"
                 alt="Diamond Brand logo"
+                loading="lazy"
               />
             </li>
           </ul>
@@ -623,6 +633,7 @@
               <img
                 src="static/public/images/TiposProductos/DiscoFreno.webp"
                 alt="Brake disc icon"
+                loading="lazy"
               />
               <a href="#">STOPTECH</a>
             </li>
@@ -630,21 +641,23 @@
               <img
                 src="static/public/images/TiposProductos/Llanta.webp"
                 alt="Wheel and tire icon"
+                loading="lazy"
               />
               <a href="#">WHEEL & TIRE</a>
             </li>
             <li>
-              <img src="static/public/images/TiposProductos/Camera.webp" alt="Camera icon" />
+              <img src="static/public/images/TiposProductos/Camera.webp" alt="Camera icon" loading="lazy" />
               <a href="#">CAMERA</a>
             </li>
             <li>
-              <img src="static/public/images/TiposProductos/Turbo.webp" alt="Turbo icon" />
+              <img src="static/public/images/TiposProductos/Turbo.webp" alt="Turbo icon" loading="lazy" />
               <a href="#">TURBO</a>
             </li>
             <li>
               <img
                 src="static/public/images/TiposProductos/Volante.webp"
                 alt="Steering wheel icon"
+                loading="lazy"
               />
               <a href="#">STEERING</a>
             </li>
@@ -671,10 +684,11 @@
 
             <div class="grid-kits">
               <article>
-                <img
-                  src="static/public/images/Kit/VolanteKit.png"
-                  alt="Task Pendant steering kit product image"
-                />
+                  <img
+                    src="static/public/images/Kit/VolanteKit.png"
+                    alt="Task Pendant steering kit product image"
+                    loading="lazy"
+                  />
                 <h3>TASK PENDANT</h3>
                 <ul aria-label="Valoración: 5 de 5 estrellas">
                   <li>
@@ -715,6 +729,7 @@
                   <img
                     src="static/public/images/Kit/FiltroKit.png"
                     alt="Oak Wooden filter kit product image"
+                    loading="lazy"
                   />
                   <span class="badge-agotado">Sold out</span>
                 </div>
@@ -758,6 +773,7 @@
                   <img
                     src="static/public/images/Kit/LlantaKit.png"
                     alt="Umbrella Stand wheel kit product image"
+                    loading="lazy"
                   />
                   <span class="badge-oferta">Sale !</span>
                 </div>
@@ -817,6 +833,7 @@
               <img
                 src="static/public/images/ProductoDelDia.webp"
                 alt="Yama Camera - Deal of the day product"
+                loading="lazy"
               />
               <h4>YAMA CAMERA</h4>
               <ul>
@@ -923,6 +940,7 @@
             <img
               src="static/public/images/Tips/FirstTip.webp"
               alt="Engine maintenance close-up"
+              loading="lazy"
             />
             <h3>NEW FROM BUYAUTOPARTS: MAGNETIC</h3>
             <div>AIR CONDITIONING — by apar</div>
@@ -938,6 +956,7 @@
             <img
               src="static/public/images/Tips/SecondTip.webp"
               alt="Trunk organization with tools"
+              loading="lazy"
             />
             <h3>UPGRADE FOR THE E30 AND E36 3 SERIES</h3>
             <div>AUTO PARTS, BRAKES — by apar</div>
@@ -953,6 +972,7 @@
             <img
               src="static/public/images/Tips/ThirdTip.webp"
               alt="Mechanic fixing car exhaust"
+              loading="lazy"
             />
             <h3>FIX YOUR RIDE, PROTECT THE ENVIRONMENT</h3>
             <div>CAR FAIL, CAR FUN, CAR NEWS — by apar</div>
@@ -975,7 +995,7 @@
         <!-- Columna 1: Información de contacto -->
         <section>
           <h2 class="none">Seccion de contacto</h2>
-          <img src="static/public/images/AparOscuro.png" alt="APAR logo" />
+          <img src="static/public/images/AparOscuro.png" alt="APAR logo" loading="lazy" />
           <div>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
@@ -1066,19 +1086,22 @@
           <!-- Métodos de pago aceptados -->
           <section>
             <h3 class="none">Metodos de pago</h3>
-            <img src="static/public/images/PaymentsMethods/Paypal.png" alt="PayPal logo" />
-            <img src="static/public/images/PaymentsMethods/Visa.png" alt="Visa logo" />
+            <img src="static/public/images/PaymentsMethods/Paypal.png" alt="PayPal logo" loading="lazy" />
+            <img src="static/public/images/PaymentsMethods/Visa.png" alt="Visa logo" loading="lazy" />
             <img
               src="static/public/images/PaymentsMethods/AmericanExpress.png"
               alt="American Express logo"
+              loading="lazy"
             />
             <img
               src="static/public/images/PaymentsMethods/Mastercard.png"
               alt="Mastercard logo"
+              loading="lazy"
             />
             <img
               src="static/public/images/PaymentsMethods/Discover.png"
               alt="Discover logo"
+              loading="lazy"
             />
           </section>
         </section>
