--- a/proyectoUsabilidad/indexAPARSemantico.html
+++ b/proyectoUsabilidad/indexAPARSemantico.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans+Linear+B&family=Nova+Square&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap"
       rel="stylesheet"
     />
 
