--- a/proyectoUsabilidad/indexAPARSemantico.html
+++ b/proyectoUsabilidad/indexAPARSemantico.html
@@ -16,9 +16,16 @@
     />
 
     <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
-    />
+  rel="preload"
+  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+  as="style"
+  onload="this.onload=null;this.rel='stylesheet'">
+
+<noscript>
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+</noscript>
   </head>
   <body>
     
